# feedscope

./: .gitignore  AGENTS.md  LICENSE  README.md  aider-updates-20250823.md  pyproject.toml
plans/: 2025-11-19-agents-preferences.md  2025-11-19-subcommand-implementation.md  research-summary-plan.md
src/feedscope/: __init__.py  __main__.py  auth.py  client.py  config.py  config_cli.py  state.py  subscriptions.py
tests/: README.md  test_cli.py
