[project]
name = "feedscope"
version = "0.1.0"
description = "Explore feed content aggregated with feedbin"
readme = "README.md"
authors = [
    { name = "Brian Dennis", email = "bmd+github@crossjam.net" }
]
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "platformdirs>=4.0.0",
    "pydantic-settings>=2.0.0",
    "typer>=0.16.1",
]

[project.scripts]
feedscope = "feedscope:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
